--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,9 @@
     "@tanstack/react-query": "^5.67.1",
     "@tanstack/react-query-devtools": "^5.67.1",
     "axios": "^1.8.1",
+    "date-fns": "^4.1.0",
     "react": "^19.0.0",
+    "react-calendar": "^5.1.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.3.0"
   },
